<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.meditena.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.meditena.ui.Cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/cart_fragment" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.meditena.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.meditena.ui.settings.SettingsFragment"
        android:label="settings"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.meditena.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/search_fragment"
        />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.meditena.ui.favorite.FavoriteFragment"
        android:label="Favorite"
        tools:layout="@layout/favorite_fragment"
        />
</navigation>