<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.RegisterSellerActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
    android:id="@+id/logo_register_seller"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:src="@drawable/seller">
</ImageView>
    <ProgressBar
        android:id="@+id/progressBar_seller"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/logo_register_seller"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.26"
        android:textColor="@color/registerSellerBtn"
        />
    <EditText
        android:id="@+id/name_register_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/progressBar_seller"
        android:hint="@string/register_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/registerSellerBtn"
        />

    <EditText
        android:id="@+id/email_register_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/name_register_seller"
        android:hint="@string/email_address"
        android:layout_centerHorizontal="true"
        android:textColor="@color/registerSellerBtn"
        />
    <EditText
        android:id="@+id/password_register_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/email_register_seller"
        android:hint="@string/register_passwrod"
        android:textColor="@color/registerSellerBtn"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/re_password_register_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_below="@+id/password_register_seller"
        android:hint="@string/register_passwrod"
        android:textColor="@color/registerSellerBtn"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/create_account_seller_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/re_password_register_seller"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/hover_btn_seller"
        android:text="@string/create_seller_account_btn"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/login_Text_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/create_account_seller_button"
        />
</RelativeLayout>
</ScrollView>