<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="90dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/customer_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/customer_image"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/costumer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/costumer_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/customer_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/customer_address"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            />
        </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>