<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.LoginSellerActivity">

    <ImageView
        android:id="@+id/seller_login_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/sellerlogin"
        />
    <ProgressBar
        android:id="@+id/progressBar_seller"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/seller_login_image"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.26"
        android:textColor="@color/registerSellerBtn"
        />
    <EditText
        android:id="@+id/seller_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_login_image"
        android:hint="@string/email_address"
        android:textSize="16sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"/>
    <EditText
        android:id="@+id/seller_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_passwrod"
        android:layout_below="@+id/seller_login_email"
        android:layout_marginHorizontal="50dp"
        android:textSize="16sp"
        />
    <Button
        android:id="@+id/seller_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login Seller account"
        android:background="@drawable/hover_btn_seller"
        android:layout_above="@+id/login_redirection_seller"
        android:layout_marginHorizontal="60dp"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/login_redirection_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_don_t_have_an_account_register"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>